<resources>
    <string name="app_name">rasp-pi-android-bt</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Section: %1$d</string>

    <!-- ===========================================================================================
    Bluetooth Service Hub ====================================================================== -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="connecting">Attempting to connect to device...</string>
    <string name="connect_success">Connected to</string>
    <string name="connect_failed">Connection failed!</string>
    <string name="not_connected">Not connected!</string>
    <string name="test_message">Test123abc@#$</string>

    <!-- SettingsFragment -->
    <string name="labael_bt_setting_auto">Automatically connect to Pi</string>
    <!-- StatusFragment -->
    <string name="label_status_state">State:</string>
    <string name="label_status_name">Connected Device Name:</string>
    <string name="label_status_address">Connected Device Address:</string>
    <string name="label_status_duration">Duration:</string>
    <string name="label_status_signal">Signal Strength:</string>



</resources>
